# ChangeLog for sys-apps/checkpolicy
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/checkpolicy/ChangeLog,v 1.49 2008/09/10 18:06:49 pebenito Exp $

  10 Sep 2008; Chris PeBenito <pebenito@gentoo.org>
  checkpolicy-1.34.4.ebuild:
  Remove rdep on flex and bison as they are build tools.

  26 May 2008; Chris PeBenito <pebenito@gentoo.org>
  checkpolicy-1.34.4.ebuild:
  Fix libsemanage dependency.

  13 May 2008; Chris PeBenito <pebenito@gentoo.org>
  -files/checkpolicy-1.30.1.diff, -checkpolicy-1.28.ebuild,
  -checkpolicy-1.30-r1.ebuild, -checkpolicy-1.34.0.ebuild,
  -checkpolicy-1.34.3.ebuild, checkpolicy-1.34.4.ebuild:
  Mark 1.34.4 stable, clear old ebuilds.

*checkpolicy-1.34.4 (29 Jan 2008)

  29 Jan 2008; Chris PeBenito <pebenito@gentoo.org>
  +checkpolicy-1.34.4.ebuild:
  New upstream bugfix release.

*checkpolicy-1.34.3 (18 Oct 2007)

  18 Oct 2007; Chris PeBenito <pebenito@gentoo.org>
  +checkpolicy-1.34.3.ebuild:
  New upstream release.

  04 Jun 2007; Chris PeBenito <pebenito@gentoo.org>
  checkpolicy-1.34.0.ebuild:
  Mark stable.

*checkpolicy-1.34.0 (15 Feb 2007)

  15 Feb 2007; Chris PeBenito <pebenito@gentoo.org>
  +checkpolicy-1.34.0.ebuild:
  New upstream release.

*checkpolicy-1.30.12 (05 Oct 2006)

  05 Oct 2006; Chris PeBenito <pebenito@gentoo.org>
  +checkpolicy-1.30.12.ebuild:
  Add SVN snapshot.

  31 Jul 2006; Chris PeBenito <pebenito@gentoo.org>
  checkpolicy-1.30-r1.ebuild:
  Mark stable, long overdue.

*checkpolicy-1.30-r1 (24 Mar 2006)

  24 Mar 2006; Chris PeBenito <pebenito@gentoo.org>
  +files/checkpolicy-1.30.1.diff, -checkpolicy-1.30.ebuild,
  +checkpolicy-1.30-r1.ebuild:
  Upstream bugfix for require blocks in base module.

*checkpolicy-1.30 (18 Mar 2006)

  18 Mar 2006; Chris PeBenito <pebenito@gentoo.org>
  +checkpolicy-1.30.ebuild:
  New upstream release.

  22 Feb 2006; Stephen Bennett <spb@gentoo.org> checkpolicy-1.28.ebuild:
  Alpha stable
