@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST checkpolicy-1.34.4.tgz 58608 RMD160 3779d019ab3a0e73b97a44a4f4f3ac13439d28a5 SHA1 ef4ee158aa966fbb5995ae1555febf7edbfb29b2 SHA256 ce0c65955b34dd95ab9853d50f85c0af26d64cab784cb2756dc3a5df34421dc6
+DIST checkpolicy-2.0.16.tar.gz 57643 RMD160 f3d4350669cca882dc0514b37569d9c50f6bd9c4 SHA1 41401a8de53c05a629f134665d75ea24676e4b65 SHA256 203036075412c9cc4dad134f8f16b796a0fc640e9f3a6b4335bce7e60c2176af
 EBUILD checkpolicy-1.34.4.ebuild 1025 RMD160 0082a782d7c7bdadde790278c7e6db10cc88c1a2 SHA1 9b039f1cf0754e8858756ebd1313bda1660c5d34 SHA256 fe587302d90b950b62087dff94bf8d7c8f5b46851955ac5cf96a93c020482537
-MISC ChangeLog 6470 RMD160 5a6043bf61127fe160697a7b25479c0527dc5a31 SHA1 18295e70eea2e6def75e562c97f8d126f66cecfd SHA256 b55631f6a2c950da1b3948f46fbede47df218510b7371e28fbd8dbdb2d245373
+EBUILD checkpolicy-2.0.16.ebuild 1068 RMD160 5fcb15446df7e1bfe3d52adcf316b972ae875379 SHA1 97d3f811f60509584ca2d8548e84d383ce378bdc SHA256 ccea29c2e635079131fce7992b39e843c7ef1857f83daa0a6f762683a55f141e
+MISC ChangeLog 6625 RMD160 dd7f62d85e798110646a58fad67775649537317f SHA1 909ecf44ea850e9b5a7bd76dd4e499d778ffc32b SHA256 921bdd46e6f72563d5cf02469fac41a9898e785c40123ffbd43427f8e5c449e3
 MISC metadata.xml 360 RMD160 4bff1b5d7190e84f7934f5b152775fc2b8e12b73 SHA1 e089234a1b02469ce1b3bae362eccd0eda835e90 SHA256 7f2dff51b3b78df07fc0b5a50f59713c51df2091150a298768bf81d2169a0fc2
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkjlkjIACgkQXifbxvYVSbSKvACfSPMXEyY9h27lP4Uxw26m3hVM
+TocAoI5B3muuRJ3JY474VwLPb6lYj+yD
+=Ohhp
+-----END PGP SIGNATURE-----
