@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/checkpolicy
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/checkpolicy/ChangeLog,v 1.49 2008/09/10 18:06:49 pebenito Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/checkpolicy/ChangeLog,v 1.50 2008/10/03 03:31:56 pebenito Exp $
+
+*checkpolicy-2.0.16 (03 Oct 2008)
+
+  03 Oct 2008; Chris PeBenito <pebenito@gentoo.org>
+  +checkpolicy-2.0.16.ebuild:
+  Initial commit of checkpolicy 2.0.
 
   10 Sep 2008; Chris PeBenito <pebenito@gentoo.org>
   checkpolicy-1.34.4.ebuild:
